Add landing page and payments

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/sass/variables";
+@import "assets/sass/fonts";
+@import "assets/sass/media-queries";
+@import "assets/sass/hero";
+@import "assets/sass/navigation";
+@import "assets/sass/header";
+@import "assets/sass/landing";
+@import "assets/sass/buttons";
+@import "assets/sass/mixins";
+@import "assets/sass/grid";
+@import "assets/sass/base";
+@import "assets/sass/payments";
+@import "assets/sass/dashboard";
+@import "assets/sass/text-format";
+@import "assets/sass/membership";
+@import "assets/sass/confirmation";
+@import "assets/sass/forms";
+@import "assets/sass/medical-background";
+@import "assets/sass/conversation";
+@import "assets/sass/doctors-table";
