Add conditional scripts Stripe and Jquery

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -76,16 +76,17 @@
         <i class="icon--green-center icon-apointments"></i>
       </div>
       <h2 class="c__subtitle">
-        BOOK YOUR FIRST APPOINTMENT
+        GET FULL SUPPORT FROM OUR SURGEONS
       </h2>
 
       <div class="container--flex">
         <div class="col-2-of-4 container--flex--white">
-          <h3 class="heading--green">Our doctors are here to help you</h3>
-          <p class="c__content"> From the dashboard you can ask all your questions you have. You will be able to
-            schedule
-            your
-            doctor’s visit and have access to special perks when traveling for your surgery.
+          <h3 class="heading--green">All the answers to your questions </h3>
+          <p class="c__content small">
+            Do you really need a surgery? to diferent
+            answers and treatmens to improve your health.
+            Get different a transparent decision and diferent point of views
+            in regards to your inqueries.
           </p>
         </div>
         <div class="col-2-of-4">
@@ -107,7 +108,7 @@
     <div class="icon__container--center">
       <i class="icon--green-center icon-apointments"></i>
     </div>
-    <h3 class="subtitle">SIGNG-UP FEE</h3>
+    <h3 class="subtitle">6 AND 12 MONTH MEMEBERSHIPS</h3>
     <i class="subtitle__small">GET UNLIMITED SUPPORT FROM OUR DOCTORS</i>
 
     <div class="col-2-of-4">
@@ -157,7 +158,7 @@
   <div class="icon__container--center">
     <i class="icon--green-center icon-cog"></i>
   </div>
-  <h3 class="subtitle">HOW IT WORKS</h3>
+  <h3 class="subtitle">HOW SURGERY CARE WORKS</h3>
   <i class="subtitle__small">THREE EASY STEPS TO FOLLOW</i>
 
   <div class="row ">
@@ -168,24 +169,25 @@
         <i class="how-it-works__triangle">
           <span>1</span>
         </i>
-        <h2 class="heading--green"> Make an appointment</h2>
-        <p class="card__content">
-          After signing up, make an appointment. Based on the information you provide, we willassign you a doctor with
-          the
-          best experience
-          in the field
-        </p>
+        <h2 class="heading--green">Screening Pahse</h2>
+        <p class="card__content small">
+          After signing up, you will need to fill up our
+          medical history report. Once your submision is done
+          you will have access to contact and provide more detail information
+          about your health.
+
       </div>
 
       <div class="how-it-works__steps">
         <i class="how-it-works__triangle">
           <span>2</span>
         </i>
-        <h2 class="heading--green"> Get approved</h2>
-        <p class="card__content">
-          After the doctor talks to you and analyzes your medical history, you will be approved and advised on the
-          procedure you will
-          need. At this point, you will also receive a complete cost breakdown of the surgery.
+        <h2 class="heading--green">Get approved for a surgery</h2>
+        <p class="card__content small">
+          When one of our specialist have decided that you need
+          a surgery you will be provided with all the information
+          you need to perform your surgery or give you the proper treatment
+
         </p>
       </div>
 
@@ -195,11 +197,11 @@
         <i class="how-it-works__triangle">
           <span>3</span>
         </i>
-        <h2 class="heading--green"> Get your surgery</h2>
-        <p class="card__content">
-          When it’s time to get your surgery, you will travel to Mexico. Your dashboard will provide you with many
-          options
-          to choose
+        <h2 class="heading--green">Time to get treated</h2>
+        <p class="card__content small">
+          When it’s time to get your surgery, you will travel to Mexico.
+          Your dashboard will provide you with many
+          optionsto choose
           from, including hotels and transporation, to make your trip much easier.
         </p>
       </div>
@@ -220,10 +222,10 @@
         <h3 class="heading--green">
           It’s only a one time payment
         </h3>
-        <p>
+        <p class="small">
           After the sign-up fee, it’s only a one time payment which covers everything - surgical materials, hospital
           expenses, and
-          doctor fees. Travel expenses are not included.
+          doctor fees. Your travel expenses are not included.
         </p>
       </div>
 
@@ -231,7 +233,7 @@
         <h3 class="heading--green">
           No health insurance needed.
         </h3>
-        <p>
+        <p class="small">
           No copays. No recurring bills. No need to spend a fortune on hospital fees.
         </p>
       </div>
@@ -240,7 +242,7 @@
         <h3 class="heading--green">
           Receive the best customer experience.
         </h3>
-        <p>
+        <p class="small">
           Our patients’ satisfaction is extremely important to us. Need help? We got your back!
         </p>
       </div>
@@ -312,7 +314,7 @@
       <i class="icon--green-center icon-doctor"></i>
     </div>
     <h3 class="subtitle">
-      Our Doctors
+      LIST OF QUALIFIED SPECIALIST IN MEXICO
     </h3>
     <i class="subtitle__small"> LIST OF ALL OUR SPECIALIZED DOCTORS</i>
 
@@ -335,7 +337,19 @@
 
         </tr>
         <tr>
-          <td>Plastic surgeons</td>
+          <td>Invasive Cardiologist</td>
+          <td class="table-text--right available"></td>
+        </tr>
+        <tr>
+          <td>Orthopedic Surgeons</td>
+          <td class="table-text--right available"></td>
+        </tr>
+        <tr>
+          <td>Gastroenterologist </td>
+          <td class="table-text--right available"></td>
+        </tr>
+        <tr>
+          <td>Dermatologiest </td>
           <td class="table-text--right available"></td>
         </tr>
       </table>
@@ -370,7 +384,7 @@
 
         <h2 class="faq__question text--blue">{{item.question}} </h2>
         <div class="faq__wrap">
-          <p class="faq__answers">{{item.response}}</p>
+          <p class="faq__answers small">{{item.response}}</p>
         </div>
       </div>
     </div>
