--- a/src/assets/sass/_doctors-table.scss
+++ b/src/assets/sass/_doctors-table.scss
@@ -5,6 +5,8 @@ table {
 
   td {
     font-size: 1.2rem;
+    width: 31%;
+    display: inline-block;
 
     @include tablet {
       font-size: 1.5rem;
@@ -15,18 +17,20 @@ table {
     border-bottom: solid 1px rgb(238, 238, 238);
     height: 40px;
     display: block;
-    line-height: 3;
+//     line-height: 3;
     position: relative;
 
     @include tablet {
       height: 5rem;
-      display: block;
+//       display: block;
       position: relative;
     }
 
     th {
       color: black;
       text-align: left;
+    width: 31%;
+    display: inline-block;
     }
   }
 }
