--- a/src/assets/sass/_grid.scss
+++ b/src/assets/sass/_grid.scss
@@ -2,6 +2,8 @@
   width: 100vw;
   margin-left: -3rem;
 
+  position: relative;
+  
   .row {
     padding: 3rem;
   }
@@ -11,7 +13,7 @@
   .container {
     &--flex {
       display: flex;
-      align-items: center;
+//       align-items: center;
 
       &--white {
         background-color: white;
@@ -111,3 +113,31 @@
   float: left;
   width: 32%;
 }
+
+
+
+.purple-card {
+  background-color: #32325d;
+  color: white;
+  padding: 3.5rem;
+  box-shadow: 1px 1px 8px 3px #a29d9d8a;
+
+  p {
+    color: white;
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+  }
+
+  span {
+    display: block;
+    margin-bottom: 1rem;
+  }
+}
+
+.white-card {
+  border: solid 1px whitesmoke;
+    color: #f1f2f7;
+    box-shadow: 0px 0px 0px 8px;
+}
+
