Finishing up details

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -125,15 +125,83 @@
     <div class="container--flex">
 
       <div class="col-2-of-4 container--flex--white purple-card">
-        <h3 class="heading--green">Our doctors make all the difference</h3>
+        <h3 class="heading--green">OUR DOCTORS MAKE ALL THE DIFFERENCE</h3>
         <p>
-          <span> <i class="icon-success"></i> Over 100+ licensed healthcare professionals </span>
+          <span> <i class="">
+              <svg
+                id="Layer_1"
+                data-name="Layer 1"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 992 992"
+                style="width: 2rem;"
+              >
+                <defs>
+                  <style>.cls-1{fill:#00ce6b;}.cls-2{fill:#089b51;}</style>
+                </defs>
+                <title>success</title>
+                <path
+                  class="cls-1"
+                  d="M512,16C238.07,16,16,238.07,16,512s222.07,496,496,496,496-222.07,496-496S785.93,16,512,16ZM795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                  transform="translate(-16 -16)"
+                />
+                <path
+                  class="cls-2"
+                  d="M795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                  transform="translate(-16 -16)"
+                />
+              </svg>
+            </i> Over 100+ licensed healthcare professionals </span>
         </p>
         <p>
-          <span> <i class="icon-success"></i> Highly trained surgeons, dermatologists, therapists </span>
+          <span>
+            <svg
+              id="Layer_1"
+              data-name="Layer 1"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 992 992"
+              style="width: 2rem;"
+            >
+              <defs>
+                <style>.cls-1{fill:#00ce6b;}.cls-2{fill:#089b51;}</style>
+              </defs>
+              <title>success</title>
+              <path
+                class="cls-1"
+                d="M512,16C238.07,16,16,238.07,16,512s222.07,496,496,496,496-222.07,496-496S785.93,16,512,16ZM795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                transform="translate(-16 -16)"
+              />
+              <path
+                class="cls-2"
+                d="M795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                transform="translate(-16 -16)"
+              />
+            </svg>
+            Highly trained surgeons, dermatologists, therapists </span>
         </p>
         <p>
-          <span> <i class="icon-success"></i> 15 years experience on average</span>
+          <span>
+            <svg
+              id="Layer_1"
+              data-name="Layer 1"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 992 992"
+              style="width: 2rem;"
+            >
+              <defs>
+                <style>.cls-1{fill:#00ce6b;}.cls-2{fill:#089b51;}</style>
+              </defs>
+              <title>success</title>
+              <path
+                class="cls-1"
+                d="M512,16C238.07,16,16,238.07,16,512s222.07,496,496,496,496-222.07,496-496S785.93,16,512,16ZM795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                transform="translate(-16 -16)"
+              />
+              <path
+                class="cls-2"
+                d="M795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                transform="translate(-16 -16)"
+              />
+            </svg> 15 years experience on average</span>
         </p>
 
       </div>
@@ -683,7 +751,7 @@
         <tr>
           <th>Surgeon</th>
           <th>Common Surgeries</th>
-          <th class="text--right">Available</th>
+          <th class="text--right available-title">Available</th>
         </tr>
 
         <tr>
@@ -776,4 +844,4 @@
 
 
 
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
