--- a/src/assets/sass/_membership.scss
+++ b/src/assets/sass/_membership.scss
@@ -9,6 +9,7 @@
   margin-bottom: 4rem;
   position: relative;
   box-shadow: 0px 0px 14px #9e9c9c;
+  cursor: pointer;
 
   @include tablet {
     width: 43vw;
