--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -9,9 +9,12 @@
 html {
   // This defines what 1rem is
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -56,6 +59,7 @@ li {
 
 button {
   border: solid 0;
+  cursor: pointer;
 }
 
 section {
@@ -145,43 +149,44 @@ p.small {
 
 // DECORATIONS
 
-.bullet-number{
-    background-color: #5858b3;
-    padding: .5rem;
-    border-radius: 50%;
-    padding: 1rem .9rem;
-    line-height: .6;
-    font-weight: 600;
-    margin-right: 1rem;
+.bullet-number {
+  background-color: #5858b3;
+  padding: .5rem;
+  border-radius: 50%;
+  padding: 1rem .9rem;
+  line-height: .6;
+  font-weight: 600;
+  margin-right: 1rem;
 }
 
-.card-ul{
-        width: auto;
-    display: inline-block;
-    background-color: #32325d;
-    padding: 3rem;
-    display: flex;
-    justify-content: space-between;
-    color: #979ae8;;
+.card-ul {
+  width: auto;
+  display: inline-block;
+  background-color: #32325d;
+  padding: 3rem;
+  display: flex;
+  justify-content: space-between;
+  color: #979ae8;
+  ;
 }
 
-.svg-promo{
-      position: absolute;
-    top: 59%;
-    width: 34rem;
-    right: 31%;
+.svg-promo {
+  position: absolute;
+  top: 59%;
+  width: 34rem;
+  right: 31%;
 }
 
-.service-title{
-      width: 100%;
-    display: inline-block;
-    background-color: #32325d;
-    /* padding: 3rem; */
-    /* display: flex; */
-    justify-content: space-between;
-    color: white;
-    text-align: left;
-    font-weight: 500;
-    padding: 2rem 3rem 2rem 3rem;
-    border-bottom: solid 2px;
+.service-title {
+  width: 100%;
+  display: inline-block;
+  background-color: #32325d;
+  /* padding: 3rem; */
+  /* display: flex; */
+  justify-content: space-between;
+  color: white;
+  text-align: left;
+  font-weight: 500;
+  padding: 2rem 3rem 2rem 3rem;
+  border-bottom: solid 2px;
 }
