--- a/src/assets/sass/_doctors-table.scss
+++ b/src/assets/sass/_doctors-table.scss
@@ -5,10 +5,12 @@ table {
 
   td {
     font-size: 1.2rem;
-    width: 31%;
+
+    width: 50%;
     display: inline-block;
 
     @include tablet {
+      width: 31%;
       font-size: 1.5rem;
     }
   }
@@ -17,20 +19,43 @@ table {
     border-bottom: solid 1px rgb(238, 238, 238);
     height: 40px;
     display: block;
-//     line-height: 3;
+    //     line-height: 3;
     position: relative;
+
 
     @include tablet {
       height: 5rem;
-//       display: block;
+      //       display: block;
       position: relative;
     }
+
+
 
     th {
       color: black;
       text-align: left;
-    width: 31%;
-    display: inline-block;
+      width: 50%;
+      display: inline-block;
+      font-size: 1.2rem;
+
+      @include tablet {
+          width: 31%;
+          font-size: 1.5rem;
+        }
+    }
+
+    .available {
+      display: none;
+       @include tablet {
+            display: inline-block;
+        }
+
+      &-title {
+        display: none;
+        @include tablet {
+            display: inline-block;
+        }
+      }
     }
   }
 }
