--- a/src/assets/sass/_grid.scss
+++ b/src/assets/sass/_grid.scss
@@ -3,7 +3,7 @@
   margin-left: -3rem;
 
   position: relative;
-  
+
   .row {
     padding: 3rem;
   }
@@ -13,7 +13,7 @@
   .container {
     &--flex {
       display: flex;
-//       align-items: center;
+      //       align-items: center;
 
       &--white {
         background-color: white;
@@ -122,6 +122,10 @@
   padding: 3.5rem;
   box-shadow: 1px 1px 8px 3px #a29d9d8a;
 
+  margin-bottom: 5rem;
+
+  @include tablet {}
+
   p {
     color: white;
     display: flex;
@@ -137,7 +141,6 @@
 
 .white-card {
   border: solid 1px whitesmoke;
-    color: #f1f2f7;
-    box-shadow: 0px 0px 0px 8px;
+  color: #f1f2f7;
+  box-shadow: 0px 0px 0px 8px;
 }
-
