--- a/src/assets/sass/_landing.scss
+++ b/src/assets/sass/_landing.scss
@@ -357,7 +357,22 @@ $title-color: #32325d;
 }
 
 footer {
-  background-image: linear-gradient(0, #352e66, #404d97);
+    background-color: #f6f9fc;
+    color: #8898aa;
+    text-align: center;
+    padding: 5rem;
+    position: relative;
+
+    &:before{
+      content:'';
+      position: absolute;
+      width: 105vw;
+      background-color: #f6f9fc;
+      left: -5%;
+      height: 100%;
+      top: 0;
+      z-index: -99;
+    }
 
   .copyrights {
     color: #bdccd4;
