--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -3,6 +3,9 @@
 
 <section>
   <div class="hero">
+
+
+    <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
     <svg
       version="1.1"
       id="Layer_1"
@@ -10,23 +13,27 @@
       xmlns:xlink="http://www.w3.org/1999/xlink"
       x="0px"
       y="0px"
-      viewBox="0 0 622 378"
-      style="enable-background:new 0 0 622 378;"
+      viewBox="0 0 622 425.2"
+      style="enable-background:new 0 0 622 425.2;"
       xml:space="preserve"
     >
       <style type="text/css">
-        .st0 {
-          fill: url(#SVGID_1_);
+        .pad1 {
+          fill: url(#pad1);
+        }
+
+        .pad2 {
+          fill: url(#pad3);
         }
 
       </style>
       <linearGradient
-        id="SVGID_1_"
+        id="pad1"
         gradientUnits="userSpaceOnUse"
-        x1="-0.1799"
-        y1="189"
-        x2="622"
-        y2="189"
+        x1="-0.2"
+        y1="378"
+        x2="-0.2"
+        y2="378"
       >
         <stop
           offset="0"
@@ -38,10 +45,34 @@
         />
       </linearGradient>
       <path
-        class="st0"
-        d="M622,0v272.9c0,0-122.3-9-334.6,46.8C75,375.5-0.2,378-0.2,378L1,0H622z"
+        class="pad1"
+        d="M-0.2,378"
+      />
+      <linearGradient
+        id="pad3"
+        gradientUnits="userSpaceOnUse"
+        x1="249.7537"
+        y1="473.7935"
+        x2="352.0495"
+        y2="-52.4731"
+      >
+        <stop
+          offset="0"
+          style="stop-color:#352E66"
+        />
+        <stop
+          offset="1"
+          style="stop-color:#404D97"
+        />
+      </linearGradient>
+      <polygon
+        class="pad2"
+        points="-0.2,425.2 622,317.4 622,0 0,0 "
       />
     </svg>
+
+
+
 
     <div class="hero__float">
       <div class="row">
@@ -56,62 +87,28 @@
 
 
 
-<!-- 
+
 <section>
-  <div class="row background-shape our-mission">
+  <div class="row our-mission">
     <h6 class="subtitle">OUR MISSION</h6>
-    <p class="">
-      We are a group of surgeons with decades of experience with one goal in common -- provide the most affordable and
-      high quality
-      healthcare for everyone View our specialt
-    </p>
-  </div>
-</section>
- -->
+    <div class="container--flex">
 
-<h3 class=" subtitle"> REMOTE HEALTHCARE</h3>
-<h4 class="subtitle--h4">Don't look for doctors, Doctors will reach to you to serve you the best, we also offer
-  unlimited consultations</h4>
-
-<!-- <section class=" ">
-  <div class="container background-shape">
-    <div class="row  ">
-      <div>
-        <h3 class="service-title">General health</h3>
-        <div class="card-ul">
-          <ul>
-            <li>Asthma</li>
-            <li>Backache</li>
-            <li>Acid Reflux</li>
-            <li>Abscess</li>
-            <li>Abdominal Pain/Cramps</li>
-            <li>Blood Pressure issues</li>
-          </ul>
-          <ul>
-            <li>Asthma</li>
-            <li>Backache</li>
-            <li>Acid Reflux</li>
-            <li>Abscess</li>
-            <li>Abdominal Pain/Cramps</li>
-            <li>Blood Pressure issues</li>
-          </ul>
-          <ul>
-            <li>Asthma</li>
-            <li>Backache</li>
-            <li>Acid Reflux</li>
-            <li>Abscess</li>
-            <li>Abdominal Pain/Cramps</li>
-            <li>Blood Pressure issues</li>
-          </ul>
-        </div>
-      </div>
+      <i class="icon-quote-left-solid"></i>
+      <p class="subtitle--h4">
+        We are a group of surgeons with decades of experience with one goal in common -- provide the most affordable
+        and
+        high quality
+        healthcare for everyone
+      </p>
+      <i class="icon-quote-right-solid"></i>
     </div>
   </div>
-</section> -->
+</section>
+
 
 
 <section>
-  <div class="row">
+  <div class="row background-shape">
     <div class="icon__container--center">
       <i class="icon--green-center icon-prescription-bottle"></i>
     </div>
@@ -127,7 +124,8 @@
       <div class="col-2-of-4 container--flex--white purple-card">
         <h3 class="heading--green">OUR DOCTORS MAKE ALL THE DIFFERENCE</h3>
         <p>
-          <span> <i class="">
+          <span>
+            <i class="">
               <svg
                 id="Layer_1"
                 data-name="Layer 1"
@@ -150,58 +148,64 @@
                   transform="translate(-16 -16)"
                 />
               </svg>
-            </i> Over 100+ licensed healthcare professionals </span>
+            </i>
+            Over 100+ licensed healthcare professionals </span>
         </p>
         <p>
           <span>
-            <svg
-              id="Layer_1"
-              data-name="Layer 1"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 992 992"
-              style="width: 2rem;"
-            >
-              <defs>
-                <style>.cls-1{fill:#00ce6b;}.cls-2{fill:#089b51;}</style>
-              </defs>
-              <title>success</title>
-              <path
-                class="cls-1"
-                d="M512,16C238.07,16,16,238.07,16,512s222.07,496,496,496,496-222.07,496-496S785.93,16,512,16ZM795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
-                transform="translate(-16 -16)"
-              />
-              <path
-                class="cls-2"
-                d="M795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
-                transform="translate(-16 -16)"
-              />
-            </svg>
+            <i>
+              <svg
+                id="Layer_1"
+                data-name="Layer 1"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 992 992"
+                style="width: 2rem;"
+              >
+                <defs>
+                  <style>.cls-1{fill:#00ce6b;}.cls-2{fill:#089b51;}</style>
+                </defs>
+                <title>success</title>
+                <path
+                  class="cls-1"
+                  d="M512,16C238.07,16,16,238.07,16,512s222.07,496,496,496,496-222.07,496-496S785.93,16,512,16ZM795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                  transform="translate(-16 -16)"
+                />
+                <path
+                  class="cls-2"
+                  d="M795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                  transform="translate(-16 -16)"
+                />
+              </svg>
+            </i>
             Highly trained surgeons, dermatologists, therapists </span>
         </p>
         <p>
           <span>
-            <svg
-              id="Layer_1"
-              data-name="Layer 1"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 992 992"
-              style="width: 2rem;"
-            >
-              <defs>
-                <style>.cls-1{fill:#00ce6b;}.cls-2{fill:#089b51;}</style>
-              </defs>
-              <title>success</title>
-              <path
-                class="cls-1"
-                d="M512,16C238.07,16,16,238.07,16,512s222.07,496,496,496,496-222.07,496-496S785.93,16,512,16ZM795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
-                transform="translate(-16 -16)"
-              />
-              <path
-                class="cls-2"
-                d="M795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
-                transform="translate(-16 -16)"
-              />
-            </svg> 15 years experience on average</span>
+            <i class="">
+              <svg
+                id="Layer_1"
+                data-name="Layer 1"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 992 992"
+                style="width: 2rem;"
+              >
+                <defs>
+                  <style>.cls-1{fill:#00ce6b;}.cls-2{fill:#089b51;}</style>
+                </defs>
+                <title>success</title>
+                <path
+                  class="cls-1"
+                  d="M512,16C238.07,16,16,238.07,16,512s222.07,496,496,496,496-222.07,496-496S785.93,16,512,16ZM795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                  transform="translate(-16 -16)"
+                />
+                <path
+                  class="cls-2"
+                  d="M795.26,394.08l-361,358.06a24,24,0,0,1-33.94-.13L228.6,578.86a24,24,0,0,1,.14-33.94l17-16.9a24,24,0,0,1,33.94.14l138,139.06L744.55,343a24,24,0,0,1,33.94.14l16.91,17a24,24,0,0,1-.14,33.94Z"
+                  transform="translate(-16 -16)"
+                />
+              </svg>
+            </i>
+            15 years experience on average</span>
         </p>
 
       </div>
@@ -229,6 +233,13 @@
   </div>
 </section>
 
+<section class="spacer-title">
+  <h3 class=" subtitle"> REMOTE HEALTHCARE</h3>
+  <h4 class="subtitle--h4">Don't look for doctors, Doctors will reach to you to serve you the best, we also offer
+    unlimited consultations</h4>
+</section>
+
+
 <section>
   <div class="container">
     <div class="row background-shape">
@@ -253,7 +264,6 @@
         </div>
         <div class="col-2-of-4">
           <button
-            style="height: 3rem; background-color: purple; width: 5rem; color: white"
             type="button"
             (click)="animateChart()"
           >ANIMATE</button>
