--- a/src/app/payments/confirmation/confirmation.component.html
+++ b/src/app/payments/confirmation/confirmation.component.html
@@ -4,7 +4,10 @@
     <i class="icon-receipt"></i>
     <div>
 
-      <button class="button--action-green">DOWNLOAD INVOICE</button>
+      <button
+        routerLink="/dashboard"
+        class="button--action-green"
+      >GOT TO YOUR DASHBOARD</button>
     </div>
   </div>
 </div>
