--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -63,9 +63,10 @@ button {
 }
 
 section {
-  margin-bottom: 6rem;
-  display: block;
-  position: relative;
+margin-bottom: 6rem;
+    display: inline-block;
+    position: relative;
+    width: 100%;
 }
 
 input:-webkit-autofill {
@@ -112,13 +113,13 @@ input[type="checkbox"] {
   box-shadow: inset 0 0 0 0 white;
   cursor: pointer;
   font: inherit;
-  height: 2rem;
+  height: 3rem;
   outline: none;
-  width: 2rem;
+  width: 3rem;
   -moz-appearance: none;
   -webkit-appearance: none;
   float: left;
-  margin-right: .5rem;
+//   margin-right: .5rem;
 
   &:checked {
     background-color: white;
@@ -157,6 +158,7 @@ p.small {
   line-height: .6;
   font-weight: 600;
   margin-right: 1rem;
+  color: white;
 }
 
 .card-ul {
