--- a/src/assets/sass/_grid.scss
+++ b/src/assets/sass/_grid.scss
@@ -101,8 +101,24 @@
   background-color: whitesmoke;
   background-color: #f7f7f7;
   transform: rotate(-8deg);
+  
 }
 
+.background-shape--reverse:before{
+     transform: rotate(8deg);
+       content: '';
+      content: '';
+      position: absolute;
+      width: 200vw;
+      height: 100%;
+      /* -webkit-transform: skew(15deg, 15deg); */
+      /* transform: skew(15deg, 15deg); */
+      z-index: -9;
+      left: -30vw;
+      background-color: whitesmoke;
+      background-color: #f7f7f7;
+ } 
+  
 .row--spacer {
   margin-top: 6rem;
   margin-bottom: 8rem;
@@ -117,25 +133,27 @@
 
 
 .purple-card {
-  background-color: #32325d;
-  color: white;
+  background-color: white;
   padding: 3.5rem;
-  box-shadow: 1px 1px 8px 3px #a29d9d8a;
+//   box-shadow: 1px 1px 8px 3px #a29d9d8a;
 
   margin-bottom: 5rem;
 
   @include tablet {}
 
   p {
-    color: white;
+    color: #32325d;
     display: flex;
     align-items: center;
     font-size: 1.5rem;
   }
 
   span {
-    display: block;
-    margin-bottom: 1rem;
+        display: flex;
+    align-items: center;
+  }
+  i{
+    margin-right: 1rem;
   }
 }
 
